# laser-ai

./: .gitignore  README.md  pyproject.toml
colab/: README.md  laser_ai_train.ipynb
laser_ai/: __init__.py  cli.py  colab_train.py
laser_ai/audio/: __init__.py  features.py  loader.py
laser_ai/augment/: __init__.py  frame.py
laser_ai/bundle/: __init__.py  pack.py
laser_ai/dataset/: __init__.py  discovery.py  pair.py  tensors.py  torch_dataset.py
laser_ai/generator/: __init__.py  base.py  primitives.py  stub.py  trained.py
laser_ai/ilda/: __init__.py  reader.py  resample.py  types.py  writer.py
laser_ai/models/: __init__.py  checkpoint.py  losses.py  sequencer.py  vae.py
laser_ai/pipeline/: __init__.py  generate.py
laser_ai/safety/: __init__.py  postprocess.py
laser_ai/training/: __init__.py  prepare.py  train_sequencer.py  train_vae.py
scripts/: curate_pairs.py
tests/: conftest.py
tests/audio/: test_features.py  test_loader.py
tests/augment/: test_frame.py
tests/bundle/: test_pack.py
tests/cli/: test_cli.py  test_cli_train.py
tests/dataset/: test_discovery.py  test_tensors.py  test_torch_dataset.py
tests/fixtures/: make_fixture_ilda.py  tiny_show.ilda
tests/generator/: test_primitives.py  test_stub.py  test_trained.py
tests/ilda/: test_reader.py  test_resample.py  test_roundtrip.py  test_types.py  test_writer.py
tests/models/: test_checkpoint.py  test_losses.py  test_sequencer.py  test_vae.py
tests/pipeline/: test_generate.py
tests/safety/: test_postprocess.py
tests/training/: test_prepare.py  test_train_sequencer.py  (+1 more)
(+3 files in other folders)
