[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laser-ai"
version = "0.1.0"
description = "AI-driven ILDA laser show generation from audio"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "librosa>=0.10",
    "soundfile>=0.12",
    "click>=8.1",
    "structlog>=24.1",
    "torch>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
laser-ai = "laser_ai.cli:cli"

[tool.setuptools.packages.find]
include = ["laser_ai*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
